alb-acm-https-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
  namespace: ssp-demo-alb
  labels:
    app: metabase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase
          ports:
            - containerPort: 3000
              name: http-server
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
