alb-acm-https-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metabase
  namespace: ssp-demo-alb
  annotations:
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:425291338417:certificate/d4982b95-1d1c-40a6-b83c-6a68691bd158
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group: metabase # name of my app

  labels:
    app: metabase

spec:
  tls:
    - hosts:
        - nclouds-test.sspdemo.link
  rules:
    - host: nclouds-test.sspdemo.link
      http:
        paths:
          - path: /*
            backend:
              serviceName: metabase
              servicePort: 443
